Exporter.java and OtherFieldsTab.java updated performance